style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}
html {
  font-size: 62.5%;
}
body {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

/* HEADER SECTION */
header {
  display: flex;
  justify-content: space-between;
  padding: 2rem 2.5rem;
  align-items: center;
  background-color: white;
  position: fixed;
  width: 100%;
}
h1 {
  font-size: 3.5rem;
  font-family: "Pacifico", cursive;
  font-weight: 500;
  color: #141641;
}
.navUl {
  display: flex;
  list-style-type: none;
  font-size: 2rem;
}
.navUl li {
  background-color: #eeeeee;
  padding: 1rem;
  margin-left: 10px;
  border-radius: 5px;
}

/* HERO SECTION */
.hero-section {
  background-image: url(/images/sweetBg.jpg);
  background-repeat: no-repeat;
  height: 40rem;
  background-position: bottom center;
  background-size: 70rem;
  display: flex;
  flex-direction: column;
  padding: 7rem 5rem 0 4rem;
}
h2 {
  font-size: 3rem;
  color: #141641;
  padding-bottom: 1.5rem;
}
.hero-section p {
  font-size: 1.6rem;
  line-height: 3rem;
  color: #76726e;
  font-weight: bold;
}
span {
  color: #fc247d;
}
button {
  font-size: 1.7rem;
  width: 16rem;
  background-color: #fc247d;
  padding: 0.7rem 1rem;
  border-radius: 5px;
  margin-top: 2rem;
  border: 2px solid black;
}
/* MAIN SECTION */
.container {
  background-color: #eeeeed;
}
.donut {
  background-color: #e2fcf5;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 10px;
}
.donut img {
  width: 15rem;
  height: 15rem;
  margin: 4rem auto 2rem;
}
.donut h3 {
  font-size: 2.5rem;
  color: #141641;
  font-weight: bolder;
  margin-bottom: 2rem;
}
.donut p {
  font-size: 1.5rem;
  line-height: 3rem;
  color: #76726e;
  padding: 0 2rem;
}
.donut button {
  margin-bottom: 4rem;
}

